Add a top-level test script runalltests.sh
Also, update the individual python test scripts to exit with error
code 1 if any test fails.

Finally, change package.json so that running 'npm test' in the
root directory runs all the tests.

--- a/package.json
+++ b/package.json
@@ -12,5 +12,8 @@
         "execSync":"*",
         "amdefine":"*"
     },
+    "scripts": {
+      "test": "scripts/runalltests.sh"
+    },
     "license":"Apache"
 }
