rewrite test script in python to be more cross-platform

--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
         "amdefine":"*"
     },
     "scripts": {
-      "test": "scripts/runalltests.sh"
+      "test": "python scripts/runalltests.py"
     },
     "license":"Apache",
     "repository" : {
