Initial implementation of instrumenting proxy server.
Note that the proxy will not work without a separate library
that is not yet available in open source.

Includes some related refactoring of esnstrument.js.

--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
         "estraverse":"*",
         "escodegen":"*",
         "execSync":"*",
-        "amdefine":"*"
+        "amdefine":"*",
+        "argparse": "*",
+        "mkdirp": "*"
     },
     "scripts": {
       "test": "python scripts/runalltests.py"
