working on code to instrument scripts in directory; WIP

--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
         "execSync":"*",
         "amdefine":"*",
         "argparse": "*",
-        "mkdirp": "*"
+        "mkdirp": "*",
+        "ncp": "*"
     },
     "scripts": {
       "test": "python scripts/runalltests.py"
