--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
         "rewriting-proxy": "*"
     },
     "scripts": {
-      "test": "python scripts/runalltests.py"
+      "test": "./node_modules/.bin/mocha node_test/*.js ; python scripts/runalltests.py"
     },
     "license":"Apache",
     "repository" : {
