--- a/package.json
+++ b/package.json
@@ -14,10 +14,11 @@
         "argparse": "*",
         "mkdirp": "*",
         "ncp": "*",
-        "rewriting-proxy": "*"
+        "rewriting-proxy": "*",
+        "mocha": "*"
     },
     "scripts": {
-      "test": "./node_modules/.bin/mocha node_test/*.js ; python scripts/runalltests.py"
+      "test": "./node_modules/.bin/mocha node_test/*.js && python scripts/runalltests.py"
     },
     "license":"Apache",
     "repository" : {
