--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
         "q": "*"
     },
     "scripts": {
-      "test": "./node_modules/.bin/mocha node_test/*.js && python scripts/runalltests.py"
+      "test": "./node_modules/.bin/mocha --reporter spec node_test/*.js && python scripts/runalltests.py"
     },
     "license":"Apache",
     "repository" : {
