changes to instrument() API.
1) allow for not specifying an output file.
2) allow for generating IID map and .ast.json files

--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
         "ncp": "*",
         "rewriting-proxy": "*",
         "mocha": "*",
-        "q": "*"
+        "q": "*",
+        "temp": "*"
     },
     "scripts": {
       "test": "./node_modules/.bin/mocha --reporter spec node_test/*.js && python scripts/runalltests.py"
