--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
         "websocket":"*",
         "source-map":"*",
         "estraverse":"*",
-        "escodegen":"https://github.com/Constellation/escodegen/tarball/master",
+        "escodegen":"*",
         "execSync":"*",
         "amdefine":"*",
         "argparse": "*",
