temporarily pull in a different version of rewriting-proxy
This is caused by breakage in the latest version of the html5
package.

--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
         "argparse": "*",
         "mkdirp": "*",
         "ncp": "*",
-        "rewriting-proxy": "*",
+        "rewriting-proxy": "https://github.com/xiemaisi/rewriting-proxy/tarball/old-html5",
         "mocha": "*",
         "q": "*",
         "temp": "*"
