--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
         "temp": "*"
     },
     "scripts": {
-      "test": "./node_modules/.bin/mocha --reporter spec node_test/*.js && python scripts/runalltests.py"
+      "test": "(cat node_test/testSuite.txt | sed 's/^/node_test\\//' | xargs ./node_modules/.bin/mocha --reporter spec) && python scripts/runalltests.py"
     },
     "license":"Apache",
     "repository" : {
