depend on older version of ncp; newest version breaks our code somehow

--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
         "amdefine":"*",
         "argparse": "*",
         "mkdirp": "*",
-        "ncp": "*",
+        "ncp": "0.6.0",
         "rewriting-proxy": "*",
         "mocha": "*",
         "q": "*",
